# IsoDDE-BC-Dify

./: .gitignore  README.md  pyproject.toml
data/: README.md
docs/: structure.md
notes/: 20260309-04-V1.0基于乳腺癌的 IsoDDE API MVP.md  20260309-04-V2.0-基于乳腺癌的 IsoDDE API MVP.md  20260310-04-V3.0-基于乳腺癌的 IsoDDE API MVP.md  20260310-04-V4.0-基于乳腺癌的 IsoDDE API MVP（Dify 实践版本）.md  20260311-04-V5.0-基于乳腺癌的 IsoDDE API MVP（Dify 实践版本）.md
scripts/: README.md  civic_annotator.py
src/isodde_bc_dify/: __main__.py  cli.py
src/isodde_bc_dify/civic/: annotate.py  io.py  schemas.py
src/isodde_bc_dify/civic/backends/: graphql.py  tsv.py
tests/: conftest.py  test_annotate.py  test_io.py  test_tsv_backend.py
tests/fixtures/: tiny_assertions.tsv  tiny_maf.tsv  tiny_variants.tsv
